[package]
name = "catastrophic-language-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
catastrophic-ast = { git = "https://github.com/samuelsleight/catastrophic-lang" }
catastrophic-parser = { git = "https://github.com/samuelsleight/catastrophic-lang" }
ruinous-util = { git = "https://github.com/samuelsleight/ruinous" }

dashmap = "5.4.0"
env_logger = "0.10.0"
tokio = { version = "1.26.0", features = ["full"] }
tower-lsp = { version = "0.19.0", features = ["proposed"]}
serde = { version = "1.0", features = ["derive"] }
log = "0.4.17"


